Fix Alignments

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -11306,6 +11306,7 @@ body.template-color-1 {
 
 .social-share-style-1 .social-share {
     margin-right: -15px;
+    width: 100%;
 }
 
 .social-share-style-1 .social-share li a {
